--- a/C3AIOOP/C3AIOOP.csproj
+++ b/C3AIOOP/C3AIOOP.csproj
@@ -81,6 +81,12 @@
     <Compile Include="dashboard.Designer.cs">
       <DependentUpon>dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="loadingscreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loadingscreen.Designer.cs">
+      <DependentUpon>loadingscreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="quarterlyrep.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="quarterlyrep.Designer.cs">
+      <DependentUpon>quarterlyrep.cs</DependentUpon>
+    </Compile>
     <Compile Include="sitrep.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +128,9 @@
     <EmbeddedResource Include="dashboard.resx">
       <DependentUpon>dashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="loadingscreen.resx">
+      <DependentUpon>loadingscreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +146,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="quarterlyrep.resx">
+      <DependentUpon>quarterlyrep.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="sitrep.resx">
       <DependentUpon>sitrep.cs</DependentUpon>
     </EmbeddedResource>
